# wp7-UC5-ais-classification-gnn

./: .gitattributes  .gitignore  .zenodo.json  AGENT.md  AGENT.yaml  LICENSE  README.md  demonstrator-v1.orchestrator.ipynb  make.bat  pyproject.toml  requirements-test.txt  requirements.txt  setup.sh  utils.py  vm-init.sh  widgets.py
.github/workflows/: ci.yml
content/: conf.py  index.rst
content/_static/: tabs.css
content/downloads/: index.rst
content/episodes/: 01-introduction.md  02-provision-vm.md  03-setup-environment.md  04-gnn-theory.md  05-ais-data.md  06-running-demonstrator.md  07-faq.md
content/episodes/snippets/: graph_construction.py  train_model.py
notebooks/: DGL_Demonstrator.ipynb
results/: README.md
scripts/: generate_images.py
src/graph_classification/: ais_timeseries_dataset.py  eval_graph_classification_ais.py  heads.py  models.py  train_graph_classification_ais.py  utils.py
tests/: conftest.py  test_coverage_gaps.py  test_dataset.py  test_eval_script.py  test_heads.py  test_imports.py  test_models.py  test_train_script.py  test_training.py  test_utils.py  test_utils_extra.py
